2012-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added sample configuration, resolves #40918

2011-03-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.1.0

2011-03-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added throwing of exceptions when query fails, resolves #10706

2010-11-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved extension configuration labels to locallang file

2010-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected handling of empty files (avoid PHP warnings)

2010-04-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed service to use new connector base class
	* Released version 1.0.1

2009-01-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 0.1.0