@@ -1,6 +1,7 @@
 2012-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added sample configuration, resolves #40918
+	* Added possibility to set locale explicitly, resolves #25703 (thanks to Sebastian Steinmetz)
 
 2011-03-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
